--- a/README
+++ b/README
@@ -2,3 +2,22 @@ Kontestator
 =================================
 
 Little example of use of akka persistence @DevoxxFr
+
+TODO :
+
+1.Create user
+2.Get user
+3.Modify user
+4.Get users
+
+5.Create kontests
+6.Get kontest
+7.Modify kontests
+8.Get kontests
+
+9.Add participant
+10.Get participants
+11.Remove participants
+
+
+
